# FPS

./: .gitmodules  CMakeLists.txt  FPS.sln  README.md  build.sh
Fps/: AVEngine.cs  AVSim.bat  AVinterface.Designer.cs  AVinterface.cs  AboutBox1.Designer.cs  AboutBox1.cs  AboutBox1.resx  ConversionForm.Designer.cs  ConversionForm.cs  DistanceCalculator.Designer.cs  DistanceCalculator.cs  Distances.cs  ErrorEstimation.cs  FilterEngine.cs  FilterJobManager.cs  Fps.csproj  Fps.sln  FpsNativeWrapper.cs  JobManagerBase.cs  LabelingPositions.cs  MainForm.Designer.cs  MainForm.cs  MainForm.resx  MatrixVector3.cs  MersenneTwister.cs  MetropolisSampler.cs  Molecule.cs  Program.cs  ProjectData.cs  Refinement.cs  SaveForm.Designer.cs  SaveForm.cs  SimParametersForm.Designer.cs  SimParametersForm.cs  SimulationBase.cs  SimulationJobManager.cs  SimulationResult.cs  SpringEngine.cs  StaticData.cs
Fps.Native/: CMakeLists.txt  av_routines.cpp  clash_routines.cpp  exported.h  fpsnative.h
Fps/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
Fps/data/: linker.txt  vdW radii.xls  vdW.txt
GPFileTools/: GPFileTools.csproj  GPFileToolsBase.cs  OptionsManager.cs  OptionsWindow.Designer.cs  OptionsWindow.cs  OptionsWindow.resx  ProgressForm.Designer.cs  ProgressForm.cs  SpreadsheetAscii.cs
GPFileTools/Properties/: AssemblyInfo.cs  Resources.Designer.cs
GPFileTools/test/: Form1.Designer.cs  Form1.cs  GPFileToolsTest.csproj  Program.cs
GPFileTools/test/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
GPFileTools/test/test data/: opts_z.txt  test.txt
NumericControls/: NumericArray.cs  NumericBox.cs  NumericControls.csproj  NumericDial.cs  SmallUpDown.cs
NumericControls/Properties/: AssemblyInfo.cs
NumericControls/test/: Form1.Designer.cs  Form1.cs  NumericControlsTest.csproj  Program.cs
NumericControls/test/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
NumericControls/test/Properties/DataSources/: Form1.datasource
